--- a/scripts/environments/local.env
+++ b/scripts/environments/local.env
@@ -5,7 +5,7 @@
 # This is set by the Azure Pipeline for other environments.
 export LOCATION="westeurope" # Required
 export WORKSPACE="myworkspace" # Required
-export SUBSCRIPTION_ID="" # Required
+export SUBSCRIPTION_ID="c29341c3-c4e9-4c46-953b-7b8edd5d0a9a" # Required
 
 # ----------------------------------------------------------
 # The following values determine the features that are enabled in the deployment.
