--- a/scripts/environments/local.env
+++ b/scripts/environments/local.env
@@ -3,8 +3,8 @@
 
 # Region to deploy into when running locally.
 # This is set by the Azure Pipeline for other environments.
-export LOCATION="westeurope" # Required
-export WORKSPACE="myworkspace" # Required
+export LOCATION="westus" # Required
+export WORKSPACE="myworkspace3" # Required
 export SUBSCRIPTION_ID="c29341c3-c4e9-4c46-953b-7b8edd5d0a9a" # Required
 
 # ----------------------------------------------------------
